Bug 278537 - image shown at wrong position
Summary: image shown at wrong position
Status: RESOLVED FIXED
Alias: None
Product: calligrawords
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Calligra Words Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-07-26 08:40 UTC by Halla Rempt
Modified: 2012-01-11 17:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
broken doc (266.50 KB, application/msword)
2011-07-26 08:41 UTC, Halla Rempt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Halla Rempt 2011-07-26 08:40:27 UTC
Version:           svn
OS:                Linux

The images in the attached file should be a kind of watermark, under the text area in the middle of the page. They are shown on top. The opacity should also be way down.

Reproducible: Always

Steps to Reproduce:
open the file

Actual Results:  
doesn't look good

Expected Results:  
should look good in a kind of tasteless way.
Comment 1 Halla Rempt 2011-07-26 08:41:18 UTC
Created attachment 62200 [details]
broken doc
Comment 2 Camilla Boemann 2012-01-11 17:00:03 UTC
Git commit 892a8d0db9c038880127367756d0ab317acca665 by C. Boemann.
Committed on 09/01/2012 at 13:13.
Pushed by boemann into branch 'master'.

PageContent area was set to that of the textshape which is wrong when dealing with shapes
in headers and footers
Now returns a content area from KoTextPage which defaults to pagearea

Words reimplement KoTextPage to return an actual text area

M  +5    -0    libs/kotext/KoTextPage.h
M  +0    -3    libs/textlayout/FloatingAnchorStrategy.cpp
M  +1    -0    libs/textlayout/KoTextDocumentLayout.cpp
M  +14   -0    words/part/KWPage.cpp
M  +9    -0    words/part/KWPage.h
M  +1    -0    words/part/KWPageManager_p.h
M  +0    -67   words/part/KWPageStyle.cpp
M  +0    -35   words/part/KWPageStyle.h
M  +4    -0    words/part/frames/KWFrameLayout.cpp

http://commits.kde.org/calligra/892a8d0db9c038880127367756d0ab317acca665