PageContent area was set to that of the textshape which is wrong when dealing with shapes in headers and footers Now returns a content area from KoTextPage which defaults to pagearea

Words reimplement KoTextPage to return an actual text area

BUG: 278537